public/styles/style.css
body {
    padding-top: 50px;
}

.hint {
    font-size: medium;
    color: gray;
}

.dropdown-menu {
    top: initial;
    left: initial;
}

.table-hover>tbody>tr:hover {
    background-color: #D2D2D2;
    cursor: pointer;
}

.table-grp {
    table-layout: fixed;
    width: 100%;
}

.table-grp>th {
    width: 33%;
}

.clickable {
    cursor: pointer;
}

.nav-sub>li>span,
.nav-list>li>span {
    position: relative;
    display: block;
    padding: 5px 15px;
}

.nav-sub>li>span.header,
.nav-list>li>span.header {
    background-color: #f6f6f6;
}

.nav-sub>li>a,
.nav-sub>li>span {
    padding-left: 40px;
}

.nav-list>li.active>a {
    color: #fff;
    background-color: #337ab7;
}

.nav-sub>li:nth-child(n+1) {
    border-top: 1px solid #DDDDDD;
}

.nav-list>li:nth-child(n+2) {
    border-top: 1px solid #DDDDDD;
}

.nav-sub>li.active>a {
    color: #fff;
    background-color: #95b1c9;
}

.nav-box {
    background: white;
    border: 1px solid #DDDDDD;
    display: block;
    position: absolute;
    z-index: 10000;
    width: 150px;
    left: -114px;
}

.topinfo{
    padding: 13px 15px;
    margin: 0 20% 0 20%;
    border-radius: 0px 0px 10px 10px;
}

@media screen and (max-width: 992px){
    .topinfo{
        margin: 0 0 0 0;
    }
}

.overlay {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    position: absolute;
    background-color: rgba(128, 128, 128, 0.5);
    z-index: 100000;
    text-align: center;
    vertical-align: middle;
}

.overlay div svg {
    vertical-align: middle;
}

.overlay div {
    display: inline-block;
    animation: rotation 1s linear infinite;
}

.overlay.hidden {
    display: none;
}

.correcter {
    height: 100%;
    width: 0;
    display: inline-block;
    vertical-align: middle;
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.hidden {
    display: none;
}

/* Organization styles END */

.student-group {
    max-height: 200px;
    overflow-y: auto;
}

.profileElement {
    width: 150px;
    padding: 10px;
    display: inline-block;
}

.field-box {
    padding: 3px;
}

.field-box b {
    display: block;
}

.navbar.spacefix {
    margin-bottom: 0px;
}

.container {
    padding-left: 0;
    padding-right: 0;
}

.row.spacefix {
    margin-top: 10px;
}
.social-login {
    margin-top: -4px;
}

.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav > li > a {
    font-weight: bold;
}

.navbar-inverse {
    background-image: none;
    border-radius: 0px;
}

.marketing .col-lg-4 {
    margin-bottom: 20px;
    text-align: center;
}

.featurette-divider {
    margin: 80px 0;
}

.btn{
    background-image: none;
}


.approved-cell {
    background-color:  #a4cfa4;
}

.passing {
    color: #194e19;
    font-weight: 200;
}


.glyphicon-remove {
    color: #601203;
}

.glyphicon-ok {
    color: #087d2a; 
}

.greentext {
    color: #084708;
}

.btn-outline-primary {
    margin-right: 20px;
}

.box-item {
    display: flex;
    flex-direction: row;
    padding-top: 20;
}

.add-btn {
    margin-left: auto;
    color: #087d2a;
}

.rm-btn {
    color: #601203;
}

.orgform {
    float: right;
}

#form-header {
    text-align: left;
    display: inline-block;
    float: none;
}

#form-button {
    display: inline-block;
    margin: auto;
    float: none;
}

.member-btn {
    float: right;
    margin-right: 0;
}

.action-btn {
    padding-left: 10;
    margin-left: 10;
    margin-inline-end: 5%;
    float: left;
}

.lab-btn {
    display: inline-block;
    flex: 1;
}

.approve-btn {
    float: left;
}

.rebuild-btn {
    float: right;
}

.past-deadline {
    color: #601203;
    font-weight: 300;
}

.addon-mini {
    min-width: 70px;
    text-align: left;
}

#message {
    font-size: 75%;
}

.load-text {
    width: 100px;
    height: 100px;
        
    position: absolute;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

.info {
    width: 30%;;
    position: absolute;
    top:0;
    bottom: 0;
    left: 0;
    right: 20%;
    margin: auto;
}
/* manual grading */
.a-element {
    margin: 0;
    border:rgb(26, 25, 27);
    border-style: solid;
    border-width: 1;
}

.a-header {
    margin: 0;
    background-color: darkgray;
    border-bottom: rgb(26, 25, 27);
    border-style: solid;
    border-width: 1;
}

.b-list {
    margin: 0;
}

.b-element {
    margin: 0;
}

.b-header {
    margin: 0;
    background-color: cadetblue;
    border-bottom: rgb(26, 25, 27);
    border-style: solid;
    border-width: 1;
}

.add-b {
    margin: 0;
    border-top: rgb(26, 25, 27);
    border-style: solid;
    border-width: 1;
    background-color: darkolivegreen;
}

.adding-b {
    margin: 0;
}

.bm-btn {
    display: block;
    float: right;
    margin-right: 1%;
}

.c-element {
    margin: 0;
    border-bottom: rgb(26, 25, 27);
    border-style: solid;
    border-width: 1;
}

.comment-div {
    margin: 0;
}

.r-info {
    display: block;
    float: right;
    margin-right: 5%;
    color: dimgray;
    font-size: 0.7em;
}

.r-btn {
    margin-top: 5%;
    margin-bottom: 10%;
} 

.r-header {
    display: block;
    float: left;
    font-size: 0.7em;
    margin-left: 3%;
    margin-top: 0;
    margin-bottom: 1%;
}

.li-review {
    border-right: none;
    border-left: none;
}

.s-info {
    display: block;
    float: right;
    border-style: solid;
    border-color: darkslategray;
    border-width: 0.5;
    background-color: lightblue;
}

.grading-view {
    margin: auto;
    width: 100%;
}

.student-div {
    width: 15%;
    height: 100%;
    border-style: solid;
    border-color: slateblue;
    float: left;
    overflow-y: auto;    
}

.students-nav {
    margin: 0;
    height: 100%;
    overflow-y: auto;
}

.student-nav>li {
    border-bottom: #601203;
    border-style: outset;
    width: 98%;
}

.f-view {
    border-style: solid;
    border-color: red;
    margin: auto;
    padding: 0;
    width: 80%;
    display: block;
    float: right;
    height: 100%;
    overflow-y: auto;
}

.r-row {
    display: flexbox;
    border-style: solid;
    border-color: #337ab7;
}

.switch-toggle {
    display: block;
    float: right;
}
  
.switch-toggle label:not(.disabled) {
    cursor: pointer;
}

/* loader shown while waiting for data being fetched from the server */

.lds-ripple {
  display: inline-block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: auto;
}
.lds-ripple div {
  position: absolute;
  border: 4px solid rgb(10, 53, 66);
  opacity: 1;
  border-radius: 50%;
  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}
.lds-ripple div:nth-child(2) {
  animation-delay: -0.5s;
}
@keyframes lds-ripple {
  0% {
    top: 28px;
    left: 28px;
    width: 0;
    height: 0;
    opacity: 1;
  }
  100% {
    top: -1px;
    left: -1px;
    width: 58px;
    height: 58px;
    opacity: 0;
  }
}

